--- a/styles/Navbar.module.scss
+++ b/styles/Navbar.module.scss
@@ -6,56 +6,94 @@ $color-cafe: #403F3F;
 
 .wrapper_header {
   position: relative;
-  z-index: 10;
-}
-
-.img {
-  margin-left: 10px;
-}
-
-.wrappernav {
-  position: fixed;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: $color-blanco;
   width: 100%;
-  height: 80px;
-  bottom: 0;
-  left: 0;
-}
 
-.wrapper_menu {
-  width: 100%;
-  position: absolute;
-  bottom: -1000px;
-  transition: 0.5s ease-in-out;
 
-  &.active {
-    bottom: 90px;
+  @media screen and (min-width: 780px) {
+    display: flex;
+    justify-content: center;
   }
 
-  ul {
-    width: 90%;
-    background-color: $color-blanco;
-    border-radius: 15px;
-    padding: 10px;
+  .wrappernav {
+    position: fixed;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    margin: 0 auto;
-    gap: 10px;
-    box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.1);
+    background-color: $color-blanco;
+    width: 100%;
+    height: 80px;
+    bottom: 0;
+    left: 0;
+    z-index: 10;
 
-    a {
-      font-size: 1.2rem;
-      font-weight: 600;
-      color: $color-negro;
+    @media screen and (min-width: 780px) {
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      border-radius: 15px;
+      position: fixed;
+      box-shadow: 1px 2px 20px 0px rgba(30, 30, 60, 0.1);
+      z-index: 10;
+      margin-top: 40px;
+      top: 0;
+      width: 80%;
+      background-color: red;
+      margin: 0 auto;
+    }
 
-      &:hover {
-        color: $color-naranja;
+    .img {
+      margin-left: 10px;
+    }
+
+    .wrapper_menu {
+      width: 100%;
+      position: absolute;
+      transition: 0.5s ease-in-out;
+
+      @media screen and (min-width: 780px) {
+        position: absolute;
+        width: 0;
+        bottom: 0;
+
+      }
+
+      ul {
+        width: 90%;
+        background-color: $color-blanco;
+        border-radius: 15px;
+        padding: 10px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: 0 auto;
+        gap: 10px;
+        box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.1);
+
+        @media screen and (min-width: 780px) {
+          flex-direction: row;
+          width: 0;
+          border-radius: 0;
+          padding: 0;
+          margin: 0;
+          box-shadow: none;
+        }
+
+        a {
+          font-size: 1.2rem;
+          font-weight: 600;
+          color: $color-negro;
+
+          &:hover {
+            color: $color-naranja;
+          }
+        }
       }
     }
   }
+
+
+
+
+
 }
